[package]
name = "rock"
version = "0.0.1"
authors = ["champii <contact@champii>"]
edition = "2018"

[dependencies]
clap = "2.32.0"
llvm-sys = "100"
lazy_static = "1.2.0"
regex = "1"
env_logger = "0.5.12"
log = "0.4"

[lib]
name = "rock"
path = "src/lib/rock.rs"

[[bin]]
name = "rock"
path = "src/bin/main.rs"
