[package]
name = "fock"
version = "0.0.1"
authors = ["champii <contact@champii>"]
edition = "2018"

[dependencies]
clap = "2.32.0"
llvm-sys = "100"
lazy_static = "1.2.0"
regex = "1"
env_logger = "0.5.12"
log = "0.4"
bitflags = "1.2.1"
concat-idents = "1.1.2"

[lib]
name = "fock"
path = "src/lib/fock.rs"

[[bin]]
name = "fock"
path = "src/bin/main.rs"
