[package]
name = "rock"
version = "0.4.1"
authors = ["champii <contact@champii>"]
edition = "2018"

[dependencies]
clap = "2.32.0"
lazy_static = "1.2.0"
regex = "1.5.6"
env_logger = "0.5.12"
log = "0.4"
bitflags = "1.2.1"
# inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm11-0"] }
inkwell =  { version = "0.1.0-beta.3", features = ["llvm12-0"] }
either = "1.5"
serde = "*"
serde_derive = '*'
bincode = "*"
colored = "2.0.0"
paste = "1.0.5"
rustyline = "9.0.0"
nom = "7.1.1"
nom_locate = "4.0.0"
itertools = "0.10.3"
snailquote = "0.3.1"

[build-dependencies]
walkdir = "2"

[lib]
name = "rock"
path = "src/lib/rock.rs"

[[bin]]
name = "rock"
path = "src/bin/main.rs"
